He terminado ocio poniendo los videos

--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -67,27 +67,36 @@
             </div>
         </section>
 
-        <div class="modal fade" id="ocio1" tabindex="-1">
+        <!-- Modal Bolera -->
+        <div class="modal fade" id="ocio1">
             <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Bolera</h5>
+                        <h5 class="modal-title">Ozone Bowling</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
-                        <img src="Imagenes/bolera.jpg" class="img-fluid mb-3" alt="Bolera">
-                        <p><strong>Bolera:</strong> En este centro comercial, disponemos de una bolera lista para ser
-                            usada por vosotros.</p>
+                        <div class="ratio ratio-16x9 mb-3">
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/-tXDrI6YurM?si=wc9wzVFb71noAYwj"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <p><strong>Ozone Bowling:</strong> Vive una experiencia inolvidable con tus amigos o familia en
+                            nuestra bolera. Disfruta de partidas llenas de emoción, luces y buena música en un ambiente
+                            moderno y divertido dentro del centro comercial.</p>
                     </div>
                     <div class="modal-footer">
-                        <a href="https://ilusiona.com/" target="_blank" class="btn btn-success">Visítanos</a>
+                        <a href="https://ozonebowling.com/" target="_blank" class="btn btn-primary">Visítanos</a>
                     </div>
                 </div>
             </div>
         </div>
 
+
         <!-- LaserCity -->
-        <!-- LaserCity -->
+
         <section class="row mb-5">
             <div class="col-md-6 offset-md-3 text-center">
                 <img src="Imagenes/LaserCity.png" class="img-fluid rounded shadow" data-bs-toggle="modal"
@@ -96,8 +105,7 @@
             </div>
         </section>
 
-
-        <div class="modal fade" id="ocio2" tabindex="-1">
+        <div class="modal fade" id="ocio2">
             <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -105,7 +113,12 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
-                        <img src="Imagenes/LaserCity2.png" class="img-fluid mb-3" alt="LaserCity">
+                        <div class="ratio ratio-16x9 mb-3">
+                            <iframe src="https://www.youtube.com/embed/Hwq4wxfgsyU?si=F4KLInV552jzpYL3"
+                                title="YouTube video player" allowfullscreen
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin"></iframe>
+                        </div>
                         <p><strong>LaserCity:</strong> En Plaza Norte 2 ofrecemos una impresionante experiencia llena de
                             diversión para disfrutar con tus familiares o amigos. En LaserCity debes liderar a tu equipo
                             eliminando al contrario en un escenario lleno de obstáculos y retos.</p>
@@ -117,6 +130,7 @@
             </div>
         </div>
 
+
         <!-- Pista de ski -->
         <section class="row mb-5">
             <div class="col-md-6 offset-md-3 text-center">
@@ -126,22 +140,28 @@
             </div>
         </section>
 
-        <div class="modal fade" id="ocio3" tabindex="-1">
+        <!-- Modal Pista de Ski -->
+        <div class="modal fade" id="ocio3">
             <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Pista de ski</h5>
+                        <h5 class="modal-title">SnowZone</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
-                        <img src="Imagenes/squisss.jpg" class="img-fluid mb-3" alt="Pista de ski">
-                        <p><strong>Pista de ski:</strong> En Plaza Norte 2 disponemos de una enorme pista de ski donde
-                            puedes esquiar todo lo que quieras, solo o en familia. Disponemos de todo el material
-                            necesario para que vivas una experiencia inolvidable.</p>
+                        <div class="ratio ratio-16x9 mb-3">
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/QvXzk7i16Do?si=reTCTdtKQZ701AdO"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <p><strong>SnowZone:</strong> ¡Ven a esquiar sin salir de Madrid! SnowZone es una pista de esquí
+                            cubierta con nieve real, perfecta para principiantes y expertos. Ideal para pasar un día
+                            diferente en familia o con amigos en cualquier época del año.</p>
                     </div>
                     <div class="modal-footer">
-                        <a href="https://www.intuxanadu.com/madrid-snozone/" target="_blank"
-                            class="btn btn-success">Visítanos</a>
+                        <a href="https://www.madridsnowzone.com/" target="_blank" class="btn btn-info">Visítanos</a>
                     </div>
                 </div>
             </div>
