--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>Ocio</title>
+    <link rel="icon" href="Imagenes/logoPlaza.jpg">
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
