plano planta alta

--- a/proyecto html/visitanos.html
+++ b/proyecto html/visitanos.html
@@ -61,6 +61,16 @@
             <h1 class="mb-4 text-center fw-bold text-plaza-norte">Visítanos</h1>
             <div class="row g-4">
 
+                <div class="col-12">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <div class="ratio ratio-16x9">
+                                <img src="Imagenes/PN2_Planta_Alta.webp" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-md-6">
                     <div class="card shadow-sm h-100">
                         <div class="card-body">
