--- a/proyecto html/cine.html
+++ b/proyecto html/cine.html
@@ -57,7 +57,7 @@
     </header>
 
     <article>
-        <h1 style="text-align:center;"> Cine Yelmo</h1>
+        <h1 class="yelmo" style="text-align:center;"> Cine Yelmo</h1>
         <div id="cartelera" class="card-container"></div>
 
         <script>
