--- a/proyecto html/cine.html
+++ b/proyecto html/cine.html
@@ -56,8 +56,8 @@
         </nav>
     </header>
 
-    <article>
-        <h1 style="text-align:center;"> Cine Yelmo</h1>
+    <article id="cine">
+        <h2 id="yelmo"><strong>CINE YELMO</strong></h2>
         <div id="cartelera" class="card-container"></div>
 
         <script>
@@ -123,7 +123,7 @@
         </div>
         <br>
         <a href="https://www.yelmocines.es/cartelera/madrid/plaza-norte-2" target="_blank">
-          <button style="margin-top:10px; padding: 8px 16px; background-color:blue; color:white; border:none; border-radius:5px; cursor:pointer;">
+          <button style="margin-top:10px; padding: 8px 16px; background-color:#122942; color:white; border:none; border-radius:5px; cursor:pointer;">
             Comprar Entradas
           </button>
         </a>
