--- a/proyecto html/index.html
+++ b/proyecto html/index.html
@@ -109,7 +109,7 @@
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
             </div>
         </div>
-        <video controls src="Imagenes/videoplazanorte2.mp4"></video>
+        <video controls autoplay src="Imagenes/videoplazanorte2.mp4"></video>
     </article>
 
     <footer class="bg-dark text-white pt-5 pb-4">
