--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -58,7 +58,7 @@
 
     <article class="container my-5">
 
-        <h2 class="mb-4 text-center">Zona de Ocio</h2>
+        <h2 class="mb-4 text-center"><strong>ZONA DE OCIO</strong></h2>
 
         <!-- Bolera -->
         <section class="row mb-5">
