--- a/proyecto html/visitanos.html
+++ b/proyecto html/visitanos.html
@@ -58,7 +58,7 @@
 
     <main class="bg-light py-5">
         <div class="container">
-            <h1 class="mb-4 text-center fw-bold text-plaza-norte">Visítanos</h1>
+            <h2 class="mb-4 text-center fw-bold text-plaza-norte">VISÍTANOS</h2>
             <div class="row g-4">
 
                 <div class="col-12">
