--- a/proyecto html/cine.html
+++ b/proyecto html/cine.html
@@ -77,7 +77,7 @@
                     horarios: ["15:00", "17:45", "20:15"]
                 },
                 {
-                    nombre: "Una Película de Minecraft",
+                    nombre: " Minecraft",
                     director: "Carlos Ortega",
                     sinopsis: "Alex y Steve deben unir fuerzas para salvar su mundo cúbico de una amenaza que amenaza con borrar toda su historia... ¡bloque por bloque!",
                     imagen: "minecraft.jpg",
