--- a/proyecto html/visitanos.html
+++ b/proyecto html/visitanos.html
@@ -241,7 +241,7 @@
                     <h5 class="text-uppercase fw-bold">Suscríbete</h5>
                     <form>
                         <div class="mb-2">
-                            <input type="email" class="form-control suscribirme" placeholder="e-mail">
+                            <input type="email" class="form-control suscribirme" placeholder="E-mail">
                         </div>
                         <button type="submit"
                             class="btn btn-primary btn-sm bg-plaza-norte border-white">Suscribirme</button>
